--- a/index.html
+++ b/index.html
@@ -7,19 +7,32 @@
     <title>mini project</title>
     <link rel="stylesheet" href="/css/common.css" />
   </head>
-  <body>
+  <body background="/img/1.jpg">
     <h1 id="clock">00:00:00</h1>
     <h1 id="greeting"></h1>
+
+    <!-- 로그인 폼 -->
     <form id="login-form">
-      <input type="text" />
+      <input type="text" class="textcolor" />
       <input type="submit" value="Log in" />
     </form>
 
+    <!-- 메모와 투두 폼 -->
     <form id="memo-form" class="hidden">
-      <input type="text" placeholder="메모를 입력해주세요" required />
-      <input type="submit" value="작성" />
+      <input
+        type="text"
+        placeholder="메모를 입력해주세요"
+        required
+        class="textcolor"
+      />
+      <input type="submit" value="메모" />
+      <input type="button" value="투두" id="todo-button" />
     </form>
 
+    <!-- 투두 보드 -->
+    <ul class="todo" id="todo-board"></ul>
+
+    <!-- 메모 보드 -->
     <div class="flex" id="memo-board"></div>
 
     <!-- body 아래 스크립트 시작-->
@@ -27,5 +40,6 @@
     <script src="/js/memo.js"></script>
     <script src="/js/background.js"></script>
     <script src="/js/clock.js"></script>
+    <script src="/js/todolist.js"></script>
   </body>
 </html>
