--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>mini project</title>
     <link rel="stylesheet" href="/css/common.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body background="/img/1.jpg">
+  <body background="/img/2.jpg">
     <h1 id="clock">00:00:00</h1>
     <h1 id="greeting"></h1>
 
